// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleTrack renders with default values 1`] = `
<body>
  <div>
    <svg
      viewBox="-220 -175 230 240"
      x="0"
      y="0"
    >
      <defs />
      
      
      <g
        class="tile straight-tile"
        transform="rotate(90 0 0)"
      >
        <path
          d="M -45,0 H 45 V 110 H -45 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -45,0 H -40 V 27.5 H -45 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -45,27.5 H -40 V 55 H -45 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -45,55 H -40 V 82.5 H -45 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -45,82.5 H -40 V 110 H -45 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M 40,0 H 45 V 27.5 H 40 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M 40,27.5 H 45 V 55 H 40 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M 40,55 H 45 V 82.5 H 40 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M 40,82.5 H 45 V 110 H 40 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <path
          d="M -155,6.735557395310443e-15 A 10,10 0 0 1 -165,10.000000000000007 L -165,100 A 100,100 0 0 0 -65,6.735557395310443e-15 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -155,6.735557395310443e-15 A 10,10 0 0 1 -157.92893218813452,7.071067811865482 L -154.3933982822018,10.606601717798219 A 15,15 0 0 0 -150,6.735557395310443e-15 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -157.92893218813452,7.071067811865482 A 10,10 0 0 1 -165,10.000000000000007 L -165,15.000000000000007 A 15,15 0 0 0 -154.3933982822018,10.606601717798219 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -70,6.735557395310443e-15 A 95,95 0 0 1 -77.23144441142776,36.35492607468353 L -72.61204674887132,38.26834323650898 A 100,100 0 0 0 -65,6.735557395310443e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -77.23144441142776,36.35492607468353 A 95,95 0 0 1 -97.82485578727798,67.175144212722 L -94.28932188134524,70.71067811865474 A 100,100 0 0 0 -72.61204674887132,38.26834323650898 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -97.82485578727798,67.175144212722 A 95,95 0 0 1 -128.64507392531647,87.76855558857224 L -126.73165676349102,92.38795325112868 A 100,100 0 0 0 -94.28932188134524,70.71067811865474 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -128.64507392531647,87.76855558857224 A 95,95 0 0 1 -165,95 L -165,100 A 100,100 0 0 0 -126.73165676349102,92.38795325112868 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        transform="rotate(180 -165 -54.99999999999999)"
      >
        <path
          d="M -210,-54.99999999999999 A 10,10 0 0 1 -220,-44.99999999999999 V 45.00000000000001 H -165 A 45,45 0 0 0 -120,7.105427357601002e-15 V -54.99999999999999 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -210,-54.99999999999999 A 10,10 0 0 1 -212.92893218813452,-47.92893218813452 L -209.3933982822018,-44.39339828220178 A 15,15 0 0 0 -205,-54.99999999999999 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -212.92893218813452,-47.92893218813452 A 10,10 0 0 1 -220,-44.99999999999999 L -220,-39.99999999999999 A 15,15 0 0 0 -209.3933982822018,-44.39339828220178 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -125,7.105427357601002e-15 A 40,40 0 0 1 -136.7157287525381,28.284271247461906 L -133.18019484660536,31.819805153394643 A 45,45 0 0 0 -120,7.105427357601002e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -136.7157287525381,28.284271247461906 A 40,40 0 0 1 -165,40.00000000000001 L -165,45.00000000000001 A 45,45 0 0 0 -133.18019484660536,31.819805153394643 Z"
            fill="var(--color-even)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -220,40.00000000000001 H -192.5 V 45.00000000000001 H -220 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -192.5,40.00000000000001 H -165 V 45.00000000000001 H -192.5 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -125,-54.99999999999999 H -120 V -27.499999999999993 H -125 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -125,-27.499999999999993 H -120 V 7.105427357601002e-15 H -125 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
       
    </svg>
    
  </div>
</body>
`;

exports[`SimpleTrack renders with the given element in slots 1`] = `
<body>
  <div />
  <div>
    <svg
      viewBox="-220 -175.00000000000003 230 240.00000000000003"
      x="0"
      y="0"
    >
      <defs>
        <circle
          cx="10"
          cy="10"
          id="circle"
          r="10"
          slot="defs"
        />
      </defs>
      
      
      <g
        class="tile straight-tile"
        transform="rotate(90 0 0)"
      >
        <path
          d="M -45,0 H 45 V 110 H -45 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -45,0 H -40 V 27.5 H -45 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -45,27.5 H -40 V 55 H -45 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -45,55 H -40 V 82.5 H -45 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -45,82.5 H -40 V 110 H -45 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M 40,0 H 45 V 27.5 H 40 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M 40,27.5 H 45 V 55 H 40 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M 40,55 H 45 V 82.5 H 40 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M 40,82.5 H 45 V 110 H 40 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <path
          d="M -155,6.735557395310443e-15 A 10,10 0 0 1 -165,10.000000000000007 L -165,100 A 100,100 0 0 0 -65,6.735557395310443e-15 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -155,6.735557395310443e-15 A 10,10 0 0 1 -157.92893218813452,7.071067811865482 L -154.3933982822018,10.606601717798219 A 15,15 0 0 0 -150,6.735557395310443e-15 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -157.92893218813452,7.071067811865482 A 10,10 0 0 1 -165,10.000000000000007 L -165,15.000000000000007 A 15,15 0 0 0 -154.3933982822018,10.606601717798219 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -70,6.735557395310443e-15 A 95,95 0 0 1 -77.23144441142776,36.35492607468353 L -72.61204674887132,38.26834323650898 A 100,100 0 0 0 -65,6.735557395310443e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -77.23144441142776,36.35492607468353 A 95,95 0 0 1 -97.82485578727798,67.175144212722 L -94.28932188134524,70.71067811865474 A 100,100 0 0 0 -72.61204674887132,38.26834323650898 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -97.82485578727798,67.175144212722 A 95,95 0 0 1 -128.64507392531647,87.76855558857224 L -126.73165676349102,92.38795325112868 A 100,100 0 0 0 -94.28932188134524,70.71067811865474 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -128.64507392531647,87.76855558857224 A 95,95 0 0 1 -165,95 L -165,100 A 100,100 0 0 0 -126.73165676349102,92.38795325112868 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        transform="rotate(180 -165 -54.99999999999999)"
      >
        <path
          d="M -210,-54.99999999999999 A 10,10 0 0 1 -220,-44.99999999999999 V 45.00000000000001 H -165 A 45,45 0 0 0 -120,7.105427357601002e-15 V -54.99999999999999 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -210,-54.99999999999999 A 10,10 0 0 1 -212.92893218813452,-47.92893218813452 L -209.3933982822018,-44.39339828220178 A 15,15 0 0 0 -205,-54.99999999999999 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -212.92893218813452,-47.92893218813452 A 10,10 0 0 1 -220,-44.99999999999999 L -220,-39.99999999999999 A 15,15 0 0 0 -209.3933982822018,-44.39339828220178 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -125,7.105427357601002e-15 A 40,40 0 0 1 -136.7157287525381,28.284271247461906 L -133.18019484660536,31.819805153394643 A 45,45 0 0 0 -120,7.105427357601002e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -136.7157287525381,28.284271247461906 A 40,40 0 0 1 -165,40.00000000000001 L -165,45.00000000000001 A 45,45 0 0 0 -133.18019484660536,31.819805153394643 Z"
            fill="var(--color-even)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -220,40.00000000000001 H -192.5 V 45.00000000000001 H -220 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -192.5,40.00000000000001 H -165 V 45.00000000000001 H -192.5 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -125,-54.99999999999999 H -120 V -27.499999999999993 H -125 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -125,-27.499999999999993 H -120 V 7.105427357601002e-15 H -125 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile straight-tile"
        transform="rotate(270 -110 -110)"
      >
        <path
          d="M -155,-110 H -65 V 0 H -155 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -155,-110 H -150 V -82.5 H -155 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -155,-82.5 H -150 V -55 H -155 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -155,-55 H -150 V -27.5 H -155 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -155,-27.5 H -150 V 0 H -155 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -70,-110 H -65 V -82.5 H -70 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -70,-82.5 H -65 V -55 H -70 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -70,-55 H -65 V -27.5 H -70 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -70,-27.5 H -65 V 0 H -70 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
       
      <rect
        height="50"
        width="100"
        x="10"
        y="10"
      />
    </svg>
    
    
  </div>
</body>
`;

exports[`SimpleTrack renders with the given parameters 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-220 -175 230 240"
      width="400"
      x="100"
      y="200"
    >
      <defs />
      
      
      <g
        class="tile straight-tile"
        transform="rotate(90 0 0)"
      >
        <path
          d="M -45,0 H 45 V 110 H -45 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -45,0 H -40 V 27.5 H -45 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -45,27.5 H -40 V 55 H -45 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -45,55 H -40 V 82.5 H -45 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -45,82.5 H -40 V 110 H -45 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M 40,0 H 45 V 27.5 H 40 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M 40,27.5 H 45 V 55 H 40 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M 40,55 H 45 V 82.5 H 40 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M 40,82.5 H 45 V 110 H 40 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <path
          d="M -155,6.735557395310443e-15 A 10,10 0 0 1 -165,10.000000000000007 L -165,100 A 100,100 0 0 0 -65,6.735557395310443e-15 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -155,6.735557395310443e-15 A 10,10 0 0 1 -157.92893218813452,7.071067811865482 L -154.3933982822018,10.606601717798219 A 15,15 0 0 0 -150,6.735557395310443e-15 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -157.92893218813452,7.071067811865482 A 10,10 0 0 1 -165,10.000000000000007 L -165,15.000000000000007 A 15,15 0 0 0 -154.3933982822018,10.606601717798219 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -70,6.735557395310443e-15 A 95,95 0 0 1 -77.23144441142776,36.35492607468353 L -72.61204674887132,38.26834323650898 A 100,100 0 0 0 -65,6.735557395310443e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -77.23144441142776,36.35492607468353 A 95,95 0 0 1 -97.82485578727798,67.175144212722 L -94.28932188134524,70.71067811865474 A 100,100 0 0 0 -72.61204674887132,38.26834323650898 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -97.82485578727798,67.175144212722 A 95,95 0 0 1 -128.64507392531647,87.76855558857224 L -126.73165676349102,92.38795325112868 A 100,100 0 0 0 -94.28932188134524,70.71067811865474 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -128.64507392531647,87.76855558857224 A 95,95 0 0 1 -165,95 L -165,100 A 100,100 0 0 0 -126.73165676349102,92.38795325112868 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        transform="rotate(180 -165 -54.99999999999999)"
      >
        <path
          d="M -210,-54.99999999999999 A 10,10 0 0 1 -220,-44.99999999999999 V 45.00000000000001 H -165 A 45,45 0 0 0 -120,7.105427357601002e-15 V -54.99999999999999 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -210,-54.99999999999999 A 10,10 0 0 1 -212.92893218813452,-47.92893218813452 L -209.3933982822018,-44.39339828220178 A 15,15 0 0 0 -205,-54.99999999999999 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -212.92893218813452,-47.92893218813452 A 10,10 0 0 1 -220,-44.99999999999999 L -220,-39.99999999999999 A 15,15 0 0 0 -209.3933982822018,-44.39339828220178 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -125,7.105427357601002e-15 A 40,40 0 0 1 -136.7157287525381,28.284271247461906 L -133.18019484660536,31.819805153394643 A 45,45 0 0 0 -120,7.105427357601002e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -136.7157287525381,28.284271247461906 A 40,40 0 0 1 -165,40.00000000000001 L -165,45.00000000000001 A 45,45 0 0 0 -133.18019484660536,31.819805153394643 Z"
            fill="var(--color-even)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -220,40.00000000000001 H -192.5 V 45.00000000000001 H -220 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -192.5,40.00000000000001 H -165 V 45.00000000000001 H -192.5 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -125,-54.99999999999999 H -120 V -27.499999999999993 H -125 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -125,-27.499999999999993 H -120 V 7.105427357601002e-15 H -125 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
       
    </svg>
    
  </div>
</body>
`;

exports[`SimpleTrack updates when the store is modified 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-220 -175.00000000000003 230 240.00000000000003"
      width="400"
      x="100"
      y="200"
    >
      <defs />
      
      
      <g
        class="tile straight-tile"
        transform="rotate(90 0 0)"
      >
        <path
          d="M -45,0 H 45 V 110 H -45 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -45,0 H -40 V 27.5 H -45 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -45,27.5 H -40 V 55 H -45 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -45,55 H -40 V 82.5 H -45 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -45,82.5 H -40 V 110 H -45 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M 40,0 H 45 V 27.5 H 40 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M 40,27.5 H 45 V 55 H 40 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M 40,55 H 45 V 82.5 H 40 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M 40,82.5 H 45 V 110 H 40 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile"
        transform="rotate(90 -110 6.735557395310443e-15)"
      >
        <path
          d="M -155,6.735557395310443e-15 A 10,10 0 0 1 -165,10.000000000000007 L -165,100 A 100,100 0 0 0 -65,6.735557395310443e-15 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -155,6.735557395310443e-15 A 10,10 0 0 1 -157.92893218813452,7.071067811865482 L -154.3933982822018,10.606601717798219 A 15,15 0 0 0 -150,6.735557395310443e-15 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -157.92893218813452,7.071067811865482 A 10,10 0 0 1 -165,10.000000000000007 L -165,15.000000000000007 A 15,15 0 0 0 -154.3933982822018,10.606601717798219 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -70,6.735557395310443e-15 A 95,95 0 0 1 -77.23144441142776,36.35492607468353 L -72.61204674887132,38.26834323650898 A 100,100 0 0 0 -65,6.735557395310443e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -77.23144441142776,36.35492607468353 A 95,95 0 0 1 -97.82485578727798,67.175144212722 L -94.28932188134524,70.71067811865474 A 100,100 0 0 0 -72.61204674887132,38.26834323650898 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -97.82485578727798,67.175144212722 A 95,95 0 0 1 -128.64507392531647,87.76855558857224 L -126.73165676349102,92.38795325112868 A 100,100 0 0 0 -94.28932188134524,70.71067811865474 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -128.64507392531647,87.76855558857224 A 95,95 0 0 1 -165,95 L -165,100 A 100,100 0 0 0 -126.73165676349102,92.38795325112868 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile curved-tile-enlarged"
        transform="rotate(180 -165 -54.99999999999999)"
      >
        <path
          d="M -210,-54.99999999999999 A 10,10 0 0 1 -220,-44.99999999999999 V 45.00000000000001 H -165 A 45,45 0 0 0 -120,7.105427357601002e-15 V -54.99999999999999 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -210,-54.99999999999999 A 10,10 0 0 1 -212.92893218813452,-47.92893218813452 L -209.3933982822018,-44.39339828220178 A 15,15 0 0 0 -205,-54.99999999999999 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -212.92893218813452,-47.92893218813452 A 10,10 0 0 1 -220,-44.99999999999999 L -220,-39.99999999999999 A 15,15 0 0 0 -209.3933982822018,-44.39339828220178 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            d="M -125,7.105427357601002e-15 A 40,40 0 0 1 -136.7157287525381,28.284271247461906 L -133.18019484660536,31.819805153394643 A 45,45 0 0 0 -120,7.105427357601002e-15 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -136.7157287525381,28.284271247461906 A 40,40 0 0 1 -165,40.00000000000001 L -165,45.00000000000001 A 45,45 0 0 0 -133.18019484660536,31.819805153394643 Z"
            fill="var(--color-even)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -220,40.00000000000001 H -192.5 V 45.00000000000001 H -220 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -192.5,40.00000000000001 H -165 V 45.00000000000001 H -192.5 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -125,-54.99999999999999 H -120 V -27.499999999999993 H -125 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -125,-27.499999999999993 H -120 V 7.105427357601002e-15 H -125 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
      
      <g
        class="tile straight-tile"
        transform="rotate(270 -110 -110)"
      >
        <path
          d="M -155,-110 H -65 V 0 H -155 Z"
          fill="var(--color-ground)"
          stroke="var(--color-separator)"
          stroke-width="var(--stroke-width-tile)"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -155,-110 H -150 V -82.5 H -155 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -155,-82.5 H -150 V -55 H -155 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -155,-55 H -150 V -27.5 H -155 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -155,-27.5 H -150 V 0 H -155 Z"
            fill="var(--color-odd)"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <path
            d="M -70,-110 H -65 V -82.5 H -70 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -70,-82.5 H -65 V -55 H -70 Z"
            fill="var(--color-even)"
          />
          
          <path
            d="M -70,-55 H -65 V -27.5 H -70 Z"
            fill="var(--color-odd)"
          />
          
          <path
            d="M -70,-27.5 H -65 V 0 H -70 Z"
            fill="var(--color-even)"
          />
        </g>
      </g>
      
       
    </svg>
    
  </div>
</body>
`;
